translation-tool/inputs/source_meta/objects/Case_Milestones__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Express Backup Case Milestones</relationshipLabel>
        <relationshipName>Case_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <formula>IF(OR(ISBLANK(Completion_Date__c),Completion_Date__c&gt;Target_Date__c ),&apos;&apos;,
IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &apos;success&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Remaining_Min_Sec__c</fullName>
        <formula>if(
    NOT(Completion_Date__c==null),null,
    if(Target_Date__c&lt;now(),null,
       text(floor((Target_Date__c-now())*1440))
       +&apos;:&apos;+
       text(Mod(floor((Target_Date__c-now())*86400),60))))</formula>
        <label>Time Remaining (Min:Sec)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voilation__c</fullName>
        <formula>IF(OR(Now()&lt;Target_Date__c,Completion_Date__c&lt;Target_Date__c ),&apos;&apos;,
IMAGE(&quot;/img/permissions_deny16.gif&quot;, &apos;violated&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voilation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isTriggered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTriggered</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Milestones</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>